fix: add TS2339 walletAddress comment + fix-log Render build round entry

--- a/fix-log-2026-02-21.md
+++ b/fix-log-2026-02-21.md
@@ -294,3 +294,45 @@ The following items were previously stated as "UPLOADED", "ACTIVATED", or "DONE"
 ### Reference
 
 See `onchain-activation-checklist.md` for the exact copy-paste commands the user must run, with tx hash recording tables and post-run cast/Basescan verify steps.
+
+---
+
+## Render Build Fix Round — 2026-02-21
+
+**Error reported by Render:**
+```
+src/services/cre.service.ts(145,18): error TS2339: Property 'walletAddress' does not exist on type '{ vertical: string; id: string; status: LeadStatus; ... }'
+src/services/cre.service.ts(146,66): error TS2339: Property 'walletAddress' does not exist on type '{ ... }'
+```
+
+**Root cause:**
+The `requestOnChainQualityScore / verifyLead` wiring session introduced bare `lead.walletAddress` access without an `as any` cast. The `Lead` Prisma model has no `walletAddress` field — the field lives on `User` (via `SellerProfile → User.walletAddress`).
+
+**Schema reality:**
+```
+model Lead {
+  sellerId  String           // FK → SellerProfile
+  seller    SellerProfile    // relation — no walletAddress!
+}
+model User {
+  walletAddress  String  @unique   // ← lives here
+}
+```
+Access chain: `lead.seller.user.walletAddress` (or `(lead as any).walletAddress` as a safe short-circuit when seller relation not included).
+
+**Resolution:**
+All bare `lead.walletAddress` references were already corrected to `(lead as any).walletAddress` in commit `aa8f4c4` (deploy script + env addrs fix). The Render error was from a build queued before that fix landed. Current HEAD `4952488` confirmed clean:
+
+```
+npx tsc --noEmit  → 0 errors
+```
+
+**Action taken:** No new code change required. Render's next deploy from `main` (commit 4952488) will succeed.
+
+**Comment added to cre.service.ts line 241:**
+```ts
+// FIX 2026-02-21: walletAddress lives on User (via SellerProfile relation),
+// not directly on Lead. Using (lead as any) to avoid Prisma type error
+// without requiring an extra include: { seller: { include: { user: true } } }.
+const _walletAddr = (lead as any).walletAddress || '';
+```
