fix: demo revert visibility + CRE dispatch fallback (2026-02-22)

--- a/fix-log-2026-02-21.md
+++ b/fix-log-2026-02-21.md
@@ -336,3 +336,56 @@ npx tsc --noEmit  → 0 errors
 // without requiring an extra include: { seller: { include: { user: true } } }.
 const _walletAddr = (lead as any).walletAddress || '';
 ```
+
+---
+
+## Render Demo Visibility & Revert Fix Round — 2026-02-22
+
+### Root Causes Identified
+
+**Bug 1 — ERC20 allowance error in pre-funding**
+`PersonalEscrowVault.deposit()` calls `safeTransferFrom(buyer, vault, amount)`. The allowance can be stale after a prior run consumes or resets it. No `require(false)` — the error string is `"ERC20: transfer amount exceeds allowance"`. Fix: wrap `approve(MaxUint256)` in try-catch with `[DEMO-REVERT]` logging and always execute it before `deposit()`, with detailed error surfacing.
+
+**Bug 2 — `lockForBid` "no data" revert**
+`lockForBid()` calls `usdcEthFeed.latestRoundData()` and `require(price > 0, "Vault: Invalid USDC/ETH price")`. On Base Sepolia testnet, the USDC/ETH Chainlink feed occasionally returns zero/stale data → raw revert with no error data → `"execution reverted (no data present)"`. The prior `sendTx()` catch block only logs `err.shortMessage` — the actual reason is lost. Fix: decode ABI-encoded revert data in `sendTx()` catch, log full `[DEMO-REVERT]` line.
+
+**Bug 3 — `USE_BATCHED_PRIVATE_SCORE` condition bug**
+`marketplace.routes.ts` line 1944 had `if (!process.env.USE_BATCHED_PRIVATE_SCORE)`. When the env var is set to `'false'` (a non-empty string), this evaluates to falsy and CRE dispatch is **suppressed**. Fix: changed to `!== 'true'`.
+
+**Bug 4 — CRE never dispatched from demo flow**
+The `[CONFIRM-ESCROW]` → `mintLeadNFT` → `requestOnChainQualityScore` chain is only triggered by a buyer manually confirming escrow in the UI — the demo never does this. So `[CRE-DISPATCH]` never appeared in Render logs during demo runs. Fix: added fallback mint + CRE dispatch in `demo-orchestrator.ts` after all cycles complete.
+
+### Files Modified
+
+| File | Change | Location |
+|------|--------|----------|
+| `backend/src/services/demo/demo-shared.ts` | `sendTx`: decode ABI revert reason; add `[DEMO-REVERT]` console.error | L309-340 |
+| `backend/src/services/demo/demo-orchestrator.ts` | Pre-fund: wrap `approve`/`deposit` in try-catch with `[DEMO-REVERT]` logs | L459-502 |
+| `backend/src/services/demo/demo-orchestrator.ts` | Added CRE dispatch fallback after cycles complete; imports `nftService`, `creService` | L74-75, L789-835 |
+| `backend/src/services/cre.service.ts` | Unconditional `[CRE-DISPATCH]` log at top of `requestOnChainQualityScore`; tagged success/failure | L635-683 |
+| `backend/src/routes/marketplace.routes.ts` | Fixed `!process.env.USE_BATCHED_PRIVATE_SCORE` → `!== 'true'`; added `[CRE-DISPATCH]` logs | L1941-1957 |
+| `backend/src/services/nft.service.ts` | `[CRE-DISPATCH]` log before mint tx; `[DEMO-REVERT]` log in catch with full error detail | L155-232 |
+
+### Exact Log Lines Added
+
+Render logs will now show at minimum:
+```
+[CRE-DISPATCH] requestOnChainQualityScore called — leadId=... tokenId=... USE_BATCHED=false contractSet=true signerSet=true
+[CRE-DISPATCH] mintLeadNFT starting — leadId=... seller=0x9Bb1… contract=0x…
+[CRE-DISPATCH] mintLeadNFT ✅ tokenId=N txHash=0x…
+[CRE-DISPATCH] ✅ requestQualityScore confirmed — requestId=0x… block=N
+[CRE-DISPATCH] demo fallback CRE submitted — requestId=0x…
+```
+
+And on any revert:
+```
+[DEMO-REVERT] lockForBid attempt 1/3 | reason="Vault: Invalid USDC/ETH price" | code=CALL_EXCEPTION | raw="..."
+[DEMO-REVERT] deposit failed for 0xa75d76b2… | raw="ERC20: transfer amount exceeds allowance"
+[DEMO-REVERT] mintLeadNFT FAILED — reason="LeadNFTv2: Not authorized" data="0x..." code=CALL_EXCEPTION msg="..."
+```
+
+### Verification
+
+```
+npx tsc --noEmit  → 0 errors ✅
+```
