fix: authorized minter startup self-heal + correct LeadNFT address (2026-02-22)

--- a/fix-log-2026-02-21.md
+++ b/fix-log-2026-02-21.md
@@ -435,3 +435,72 @@ vault.demoMode()  → true ✅
 vault.authorizedCallers(deployer) → true ✅
 git push → commit 2ee613a ✅
 ```
+
+---
+
+## Final Authorized Minter Fix & Independent Basescan Verification — 2026-02-22
+
+### Root Cause
+
+`LEAD_NFT_CONTRACT_ADDRESS` in `.env` pointed to `0xB93A1Ff…` which has **2-byte bytecode** (not deployed on Base Sepolia). The real LeadNFTv2 is at `0x73ebD9218aDe497C9ceED04E5CcBd06a00Ba7155`. Additionally, the deployer `0x6BBcf…` was not in `authorizedMinters` on that contract, causing every `mintLead` call to revert.
+
+### Fixes Applied
+
+**A. `.env` — correct LeadNFTv2 address**
+
+```diff
++LEAD_NFT_CONTRACT_ADDRESS_BASE_SEPOLIA=0x73ebD9218aDe497C9ceED04E5CcBd06a00Ba7155
+```
+
+`nft.service.ts` already checks `LEAD_NFT_CONTRACT_ADDRESS_BASE_SEPOLIA` first (L9), so this is now picked up correctly.
+
+**B. `setAuthorizedMinter(deployer, true)` — called on-chain**
+
+- **TX:** `0x8e94d40004d40f0a35d59efa82d0f78820dde1a92950d373a512cb00a9644f1a`
+- **Status:** confirmed, `authorizedMinters(deployer): true` ✅
+
+**C. `demo-orchestrator.ts` — startup self-healing guard**
+
+Injected at the top of `runFullDemo()` (after banner, before pre-flight balances):
+
+```typescript
+// Reads authorizedMinters from LeadNFTv2.
+// If false, calls setAuthorizedMinter(deployer, true) automatically.
+const isMinter = await nftCheck.authorizedMinters(signer.address);
+console.log(`[NFT MINT] Pre-flight — Is Authorized Minter: ${isMinter}`);
+if (!isMinter) {
+    const authTx = await nftCheck.setAuthorizedMinter(signer.address, true, { gasLimit: 100_000 });
+    await authTx.wait(1);
+}
+```
+
+### Log Lines That Confirm Success
+
+On next demo run, Render logs will show:
+
+```
+[NFT MINT] Pre-flight — Is Authorized Minter: true (deployer=0x6BBcf283…)
+[NFT MINT] Authorized Minter check: ✅ true
+```
+
+If somehow still false (self-heals on the fly):
+```
+[NFT MINT] Authorized Minter check: ⚠️ false — self-healing…
+[NFT MINT] setAuthorizedMinter tx: 0x… — Is Authorized Minter now: true
+```
+
+Then from the BuyItNow fallback or normal mint path:
+```
+[CRE-DISPATCH] mintLeadNFT starting — leadId=... seller=0x9Bb1…
+[CRE-DISPATCH] BuyItNow mint ✅ — tokenId=N tx=0x…
+[CRE-DISPATCH] BuyItNow CRE ✅ — requestId=0x…
+```
+
+### Verification
+
+```
+npx tsc --noEmit                         → 0 errors ✅
+nft.authorizedMinters(deployer)          → true ✅ (confirmed on Base Sepolia)
+LEAD_NFT_CONTRACT_ADDRESS_BASE_SEPOLIA   → 0x73ebD9218... ✅ (22KB contract)
+setAuthorizedMinter TX status            → 1 (success) ✅
+```
