docs: cert correction  ACE address 0xAea2590E, CREVerifier 0xfec22A51...af8, ACE Policy Engine row removed (2026-02-22)

--- a/fix-log-2026-02-21.md
+++ b/fix-log-2026-02-21.md
@@ -541,3 +541,35 @@ New vault (0x56bB31bE) live    → demoMode=true, authorizedCallers=true ✅
 LeadNFTv2 (0x73ebD921) live   → authorizedMinters(deployer)=true ✅
 Submission ready               → final-submission-certification.md ✅
 ```
+
+---
+
+## Certification Correction  ACE Address & CREVerifier Address  2026-02-22
+
+### Corrections Applied
+
+**A. inal-submission-certification.md  ACE Policy Engine row removed**
+
+The previous cert listed two separate ACE rows:
+- ACECompliance ->  xAea2590E1E95F0d8bb34D375923586Bf0744EfE6 correct
+- ACE Policy Engine ->  x746245858A5A5bCccfd0bdAa228b1489908b9546 removed (internal policy contract, not the primary ACE integration point)
+
+The active, verified Chainlink ACE contract on Base Sepolia is ACECompliance at  xAea2590E1E95F0d8bb34D375923586Bf0744EfE6. Correction applied.
+
+**B. inal-submission-certification.md  CREVerifier address corrected**
+
+Truncation error:  xfec22A5159E077d7016AA84A79eFD5719D3A9F70 ->  xfec22A5159E077d7016AAb5fC3E91e0124393af8 (full address, matches README and Basescan).
+
+**C. current-status.md  rewritten with correct ACE reference**
+
+ACE service row updated: ACECompliance  xAea2590E... is the verified on-chain address.
+
+### Verified Final Contract Table
+
+| Contract | Correct Address |
+|----------|----------------|
+| PersonalEscrowVault | `0x56bB31bE214C54ebeCA55cd86d86512b94310F8C` |
+| LeadNFTv2 | `0x73ebD9218aDe497C9ceED04E5CcBd06a00Ba7155` |
+| CREVerifier | `0xfec22A5159E077d7016AAb5fC3E91e0124393af8` |
+| VRFTieBreaker | `0x86c8f348d816c35fc0bd364e4a9fa8a1e0fd930e` |
+| ACECompliance | `0xAea2590E1E95F0d8bb34D375923586Bf0744EfE6` |
