feat(auction-sync): backend is now single source of truth for auction state
Changes:
- auction-closure.service.ts: emit global auction:closed (SOLD+UNSOLD)
- socket.ts: emit auction:updated with server remainingTime on every new bid
- marketplace.routes.ts: add GET /leads/:leadId/auction-state
- demo-orchestrator.ts: emit auction:closed (SOLD + BuyItNow paths)
- LeadCard.tsx: isClosed state + socket listeners + closing banner <=10s
- AuctionTimer.tsx: accept serverRemainingMs prop for server-init timer

Fixes 10-15s frontend desync after auction close

--- a/fix-log-2026-02-21.md
+++ b/fix-log-2026-02-21.md
@@ -573,3 +573,52 @@ ACE service row updated: ACECompliance  xAea2590E... is the verified on-chain ad
 | CREVerifier | `0xfec22A5159E077d7016AAb5fC3E91e0124393af8` |
 | VRFTieBreaker | `0x86c8f348d816c35fc0bd364e4a9fa8a1e0fd930e` |
 | ACECompliance | `0xAea2590E1E95F0d8bb34D375923586Bf0744EfE6` |
+
+---
+
+## Auction Sync Excellence Pass — 2026-02-22
+
+**Author**: Antigravity (AI pair programmer)
+**Date**: 2026-02-22
+**Scope**: Frontend auction countdown desynchronization — auctions "ended" in UI while bids continued arriving 10–15 s later.
+
+### Root Cause
+
+| Location | Problem |
+|---|---|
+| `auction-closure.service.ts:53` | 58-second safety gate meant backend closed ~58 s after `auctionEndAt`, but the frontend countdown reached 0 at `auctionEndAt` |
+| `auction-closure.service.ts:572` | `resolveAuction` only emitted `auction:resolved` (room-scoped), never a global `auction:closed` event |
+| `LeadCard.tsx:71` | Timer ticked purely from local `Date.now()` vs stored `auctionEndAt`; never corrected from server |
+| `socket.ts:389` | `marketplace:bid:update` emitted on new bids, but no `remainingTime` field |
+| `demo-orchestrator.ts` | Demo cycle close never emitted `auction:closed` to the frontend |
+
+### Fix Summary
+
+**Backend (3 files)**:
+- `auction-closure.service.ts` — Added `io.emit('auction:closed', { leadId, status, winnerId?, winningAmount?, settleTxHash?, finalBids?, remainingTime:0, isClosed:true, serverTs })` on both SOLD and UNSOLD closure paths. Log line format:
+  ```
+  [AUCTION-CLOSED] leadId=<id> winner=<buyerId> amount=<N> tx=<0x...>
+  [AUCTION-CLOSED] leadId=<id> status=UNSOLD buyNowPrice=<N|—>
+  ```
+- `socket.ts` — Added `io.emit('auction:updated', { leadId, remainingTime, serverTs, bidCount, highestBid })` on every new bid placement. Frontend timers re-baseline on each bid rather than drifting from page-load timestamp.
+- `marketplace.routes.ts` — Added `GET /leads/:leadId/auction-state` returning `{ remainingTime, status, isClosed, serverTs, bidCount }`. Used as a 5-second polling fallback when socket is disconnected.
+- `demo-orchestrator.ts` — Emits `auction:closed` after vault settle (SOLD path, includes `settleTxHash`) and after BuyItNow fallback (UNSOLD path). Also emits `auction:updated` on each demo bid placement.
+
+**Frontend (3 files)**:
+- `LeadCard.tsx` — Added `isClosed` (boolean state), `remainingMs` (number state). Socket listener for `auction:updated` re-baselines `remainingMs`. Socket listener for `auction:closed` sets `isClosed=true`, clears the local interval immediately. The `isLive` check now gates on `!isClosed && lead.status === 'IN_AUCTION'`. Added "🔒 Closing in Xs — final bids now" pulsing banner when `remainingMs ≤ 10_000`. Added "Auction Ended" overlay from server event rather than only from `auctionEndFeedback` prop.
+- `AuctionTimer.tsx` — Added optional `serverRemainingMs` prop. When provided during BIDDING phase, initialises timer from the server value, and re-syncs on each push.
+
+### New Log Lines
+```
+[AUCTION-CLOSED] leadId=<id> winner=<buyerId> amount=50 tx=0xabc...
+[AUCTION-CLOSED] leadId=<id> status=UNSOLD (BuyItNow fallback)
+```
+
+### Files Changed
+- `backend/src/services/auction-closure.service.ts`
+- `backend/src/rtb/socket.ts`
+- `backend/src/routes/marketplace.routes.ts`
+- `backend/src/services/demo/demo-orchestrator.ts`
+- `frontend/src/components/marketplace/LeadCard.tsx`
+- `frontend/src/components/bidding/AuctionTimer.tsx`
+
